Links to index updated

--- a/miller/index.html
+++ b/miller/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class='col-sm-12'>
           <ul class="nav navbar-nav">
-            <li ui-sref-active="active"><a href ui-sref='index' translate='footer.home'></a>
+            <li ui-sref-active="active"><a href="/" translate='footer.home'></a>
             </li>
             <li ui-sref-active="active"><a href ui-sref='page({name:"terms-of-use"})' translate='footer.termsofservice'></a>
             </li>
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
           </button>
           <div class='navbar-brand' id="logo">
-            <a ui-sref='index'>
+            <a href="/">
               <img src='{% static "/images/meng-aktioun-logo.jpg" %}'>
             </a>
           </div>
