--- a/miller/index.html
+++ b/miller/index.html
@@ -553,14 +553,14 @@
               status: [
                 {
                   slug: 'draft',
-                  url: '/draft',
+                  url: 'draft',
                   filters: {
                     status: 'draft'
                   }
                 },
                 {
                   slug: 'reviewdone',
-                  url: '/to-be-published',
+                  url: 'to-be-published',
                   filters: {
                     status: 'reviewdone'
                   }
