--- a/miller/index.html
+++ b/miller/index.html
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
           </button>
           <div class='navbar-brand' id="logo">
-            <a href="/">
+            <a ui-sref="publications.all">
               <img src='{% static "/images/meng-aktioun-logo.jpg" %}'>
             </a>
           </div>
