Use tranlate instead of hard coded label for nav button that allow to open the 'shopping cart' modal

--- a/miller/index.html
+++ b/miller/index.html
@@ -86,7 +86,7 @@
 
           <ul style='margin-left: 10px' class="nav navbar-nav navbar-right">
             <li ng-if="!cart.isEmpty()" ng-cloak>
-              <a ng-click="openDownloadCartModal()" class="force-pointer">(<span ng-bind="cart.count()"> </span>) download article<span ng-if="cart.count() > 1">s</span></a>
+              <a ng-click="openDownloadCartModal()" class="force-pointer">(<span ng-bind="cart.count()"> </span>) <span translate="modal.cart.open"></span></a>
             </li>
             {% if user.is_authenticated %}
 
