Allow to visit again / even if it's the current state route when clicking on the main top bar logo. This is useful mainly to remove all story filters at once

--- a/miller/index.html
+++ b/miller/index.html
@@ -42,7 +42,7 @@
             <span class="icon-bar"></span>
           </button>
           <div class='navbar-brand' id="logo">
-            <a ui-sref="publications.all">
+            <a ui-sref="publications.all" ui-sref-opts="{reload: true}">
               <img src='{% static "/images/meng-aktioun-logo.jpg" %}'>
             </a>
           </div>
