--- a/miller/index.html
+++ b/miller/index.html
@@ -5,17 +5,22 @@
   <div id="footer" ng-class='state'>
     <div class='container'>
       <div class='row'>
-        <div class='col-sm-6'>
-          <div class='copyright'>
+        <div class='col-sm-12'>
+          <p>
+            <img style='height:180px;' src='{% static "images/csdd-logo.png" %}'>
+            <img style='height:180px;' src='{% static "images/logo_UL.jpg" %}'>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div>
+          <div class='copyright' style="margin-right: 15px; text-align: right">
           Copyright &copy; <a href="http://www.uni.lu" target="_blank">Université du Luxembourg</a> {{ now }}. All rights reserved.
           </div>
 
         </div>
-        <div class='col-sm-6'>
-          <p>
-            <img style='height:180px;' src='{% static "images/csdd-logo.png" %}'>
-          </p>
         </div>
+      <div class="row">
         <div class='col-sm-12'>
           <ul class="nav navbar-nav">
             <li ui-sref-active="active"><a href="/" translate='footer.home'></a>
