--- a/miller/index.html
+++ b/miller/index.html
@@ -7,7 +7,7 @@
       <div class='row'>
         <div class='col-sm-12'>
           <p>
-            <img style='height:180px;' src='{% static "images/csdd-logo.png" %}'>
+            <img style='height:130px;' src='{% static "images/csdd-logo.jpg" %}'>
             <img style='height:180px;' src='{% static "images/logo_UL.jpg" %}'>
           </p>
         </div>
@@ -48,12 +48,12 @@
           </button>
           <div class='navbar-brand' id="logo">
             <a ui-sref="publications.all" ui-sref-opts="{reload: true}">
-              <img src='{% static "/images/meng-aktioun-logo.jpg" %}'>
+              <img src='{% static "/images/V4_logo.png" %}' style="padding-top: 15px; margin-right: 20px">
             </a>
           </div>
         </div>
 
-        <div class="collapse navbar-collapse">
+        <div class="collapse navbar-collapse" style="margin-top: 5px">
 
 
           <ul class="nav navbar-nav">
