Add attribute description to inform that the tags come with a description

--- a/miller/index.html
+++ b/miller/index.html
@@ -538,7 +538,8 @@
                   url: '/sdg/'+d,
                   filters: {
                     tags__slug: d
-                  }
+                  },
+                  description: true
                 }
               }),
               status: [
