--- a/miller/index.html
+++ b/miller/index.html
@@ -47,6 +47,7 @@
               <a href title='toggle menu'><div class='icon icon-menu'></div></a>
             </li>
             <!-- <li class="active"><a href="#">home <span class="sr-only">(current)</span></a></li> -->
+            <li ui-sref-active="active"><a href ui-sref="publications.all" ui-sref-opts="{reload: true}" translate="headline.home"></a></li>
             <li ui-sref-active="active"><a href ui-sref='page({name:"about"})' translate="headline.about"></a></li>
             <li ui-sref-active="active"><a href ui-sref='page({name:"people"})' translate="headline.people"></a></li>
             <!-- <li ui-sref-active="active"><a href ui-sref='authors' translate="headline.authors"></a></li> -->
