FR lang proviry removed from languages list

--- a/miller/index.html
+++ b/miller/index.html
@@ -131,7 +131,7 @@
 
               <ul class="dropdown-menu" role="menu">
                 <li ng-class="{'active': language=='en_US'}"><a ng-click='changeLanguage("en_US")' translate='language.en_US'></a></li>
-                <li ng-class="{'active': language=='fr_FR'}"><a ng-click='changeLanguage("fr_FR")' translate='language.fr_FR'></a></li>
+<!--                <li ng-class="{'active': language=='fr_FR'}"><a ng-click='changeLanguage("fr_FR")' translate='language.fr_FR'></a></li>-->
                 <li ng-class="{'active': language=='de_DE'}"><a ng-click='changeLanguage("de_DE")' translate='language.de_DE'></a></li>
               </ul>
 
