Translate search placeholder

--- a/miller/index.html
+++ b/miller/index.html
@@ -60,7 +60,7 @@
             <li id='search-wrapper'>
               <form role="form" ng-submit="search(searchquery)">
                 <div class="input-group">
-                  <input type="text" class="form-control" ng-model="searchquery" placeholder="Search for...">
+                  <input type="text" class="form-control" ng-model="searchquery" translate-attr="{ placeholder: 'headline.search'}">
                   <span class="input-group-btn">
                     <button ng-click="search(searchquery)" class="btn btn-secondary" type="button"><div class='icon icon-magnifier'></div></button>
                   </span>
