Add missing articles types

--- a/miller/index.html
+++ b/miller/index.html
@@ -558,13 +558,24 @@
               ],
               writing: [// articles type
                 {
+                  slug: 'paper',
+                  url: '/paper',
+                  orderby: 'data__issue,-date'
+                },
+                {
                   slug: 'reports',
                   url: '/reports',
                   orderby: 'data__issue,-date'
                 },
                 {
                   slug: 'courses',
-                  url: '/courses'
+                  url: '/courses',
+                  orderby: 'data__issue,-date'
+                },
+                {
+                  slug: 'challenges',
+                  url: '/challenges',
+                  orderby: 'data__issue,-date'
                 },
                 {
                   slug: 'funding',
