Extend SDG definition to be able to specify that the tag should be represented by a picture and not by text

--- a/miller/index.html
+++ b/miller/index.html
@@ -537,7 +537,8 @@
                   filters: {
                     tags__slug: d
                   },
-                  description: true
+                  description: true,
+                  asPicture: true
                 }
               }),
               status: [
