--- a/miller/index.html
+++ b/miller/index.html
@@ -22,7 +22,7 @@
   {% block navbar %}
     <nav id="navbar" class='navbar navbar-default' ng-init='showMenu=false' ng-class='{"show-menu":showMenu}' ng-controller='PulseCtrl'>
 
-      <div class='container' >
+      <div class='container'>
         <div class="navbar-header">
           <button type="button" ng-click="showMenu=!showMenu" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
@@ -31,7 +31,7 @@
           </button>
           <div class='navbar-brand' id="logo">
             <a ui-sref="publications.all" ui-sref-opts="{reload: true}">
-              <img src='{% static "/images/V4_logo.png" %}' style="padding-top: 15px; margin-right: 20px">
+              <img src='{% static "/images/aktioun-nohaltegkeet-hor-en.png" %}'>
             </a>
           </div>
         </div>
@@ -52,7 +52,6 @@
             <!-- <li ui-sref-active="active"><a href ui-sref='authors' translate="headline.authors"></a></li> -->
             <li ng-class="{active: state.includes('blog')}"><a ui-sref="blog.all" translate="state.blog.all.title"></a></li>
 
-
            <!--  <li ng-class="{active: state.includes('event')}"><a ui-sref="events.everything" translate="headline.events"></a></li>
             -->
             <!-- <li ng-if='user.username' ui-sref-active="active"><a ui-sref="draft"><b style='color:#151515' translate="write"></b></a></li> -->
@@ -70,8 +69,6 @@
 
 
           </ul>
-
-
 
           <ul style='margin-left: 10px' class="nav navbar-nav navbar-right">
             <li ng-if="!cart.isEmpty()" ng-cloak>
@@ -252,6 +249,7 @@
             // 'inner-table-of-documents': $('#inner-table-of-documents'),
             // 'writing-tools': $('#writing-tools')
           },
+
           _is_mobile = _windox.width() < 768,
           _navbar_offset = navh,
           st,
@@ -529,7 +527,24 @@
               }],
               // to be improved
               availableRoutes: ['writing','tags', 'specials'],
-              specials: ['no-poverty','zero-hunger','good-health-well-being','quality-education','gender-equality','clean-water-sanitation','affordable-clean-energy','decent-work-economic-growth','industry-innovation-infrastructure','reduced-inequality','sustainable-cities-communities','responsible-consumption-production','climate-actions','life-below-water','life-on-land','piece-justice-strong-institutions','partnerships-for-the-goals'
+              specials: [
+                'no-poverty',
+                'zero-hunger',
+                'good-health-well-being',
+                'quality-education',
+                'gender-equality',
+                'clean-water-sanitation',
+                'affordable-clean-energy',
+                'decent-work-economic-growth',
+                'industry-innovation-infrastructure',
+                'reduced-inequality',
+                'sustainable-cities-communities',
+                'responsible-consumption-production',
+                'climate-actions',
+                'life-below-water',
+                'life-on-land',
+                'piece-justice-strong-institutions',
+                'partnerships-for-the-goals'
               ].map(function(d) {
                 return {
                   slug: d,
