Add agriculture tag

--- a/miller/index.html
+++ b/miller/index.html
@@ -628,7 +628,7 @@
 
               ],
 
-              tags:['government', 'civil-society', 'municipality', 'research-organisation', 'school', 'enterprise'].map(function(d) {
+              tags:['government', 'civil-society', 'municipality', 'research-organisation', 'school', 'enterprise', 'agriculture'].map(function(d) {
                 return {
                   slug: d,
                   url: '/'+d,
