--- a/miller/index.html
+++ b/miller/index.html
@@ -20,18 +20,22 @@
   </div>
   {% endblock %}
   {% block navbar %}
-    <nav id="navbar" class='navbar navbar-default' ng-init='showMenu=false' ng-class='{"show-menu":showMenu}' ng-controller='PulseCtrl'>
+    <nav id="navbar" class='navbar navbar-default bg-header' ng-init='showMenu=false' ng-class='{"show-menu":showMenu}' ng-controller='PulseCtrl'>
+      <div class="header-filter" style="position: absolute; height: 100%; background-color: #73bbc9;">
+        bla
+      </div>
+      <div style="position: relative; background: url('{% static "/images/backgrounds/header.svg" %}') no-repeat left top; background-size: cover; width:100%">
 
-      <div class='container'>
+      <div class='container' style="height: 300px;">
         <div class="navbar-header">
           <button type="button" ng-click="showMenu=!showMenu" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <div class='navbar-brand' id="logo">
+          <div class='navbar-brand' id="logo" style="align-content: center">
             <a ui-sref="publications.all" ui-sref-opts="{reload: true}">
-              <img src='{% static "/images/aktioun-nohaltegkeet-hor-lu.png" %}'>
+              <img style="margin-left: 5rem;margin-top: 2rem; width: 15rem" src='{% static "/images/logo_bibe.svg" %}'>
             </a>
           </div>
         </div>
@@ -49,14 +53,14 @@
             <li ui-sref-active="active"><a href ui-sref="publications.all" ui-sref-opts="{reload: true}" translate="headline.home"></a></li>
             <li ui-sref-active="active"><a href ui-sref='map' translate="headline.map"></a></li>
             <li ui-sref-active="active"><a href ui-sref='page({name:"about"})' translate="headline.about"></a></li>
-            <li ui-sref-active="active"><a href ui-sref='page({name:"people"})' translate="headline.people"></a></li>
+            <li ui-sref-active="active"><a href ui-sref='page({name:"contact"})' translate="headline.contact"></a></li>
             <!-- <li ui-sref-active="active"><a href ui-sref='authors' translate="headline.authors"></a></li> -->
-            <li ng-class="{active: state.includes('blog')}"><a ui-sref="blog.all" translate="state.blog.all.title"></a></li>
+<!--            <li ng-class="{active: state.includes('blog')}"><a ui-sref="blog.all" translate="state.blog.all.title"></a></li>-->
 
            <!--  <li ng-class="{active: state.includes('event')}"><a ui-sref="events.everything" translate="headline.events"></a></li>
             -->
             <!-- <li ng-if='user.username' ui-sref-active="active"><a ui-sref="draft"><b style='color:#151515' translate="write"></b></a></li> -->
-            <li id='search-wrapper'>
+            <!--<li id='search-wrapper'>
               <form role="form" ng-submit="search(searchquery)">
                 <div class="input-group">
                   <input type="text" class="form-control" ng-model="searchquery" translate-attr="{ placeholder: 'headline.search'}">
@@ -66,7 +70,7 @@
                 </div>
 
               </form>
-            </li>
+            </li>-->
 
 
           </ul>
@@ -119,18 +123,30 @@
               <a ng-href='{% url "login_view" %}?next={% verbatim %}{{path}}{% endverbatim %}' translate="headline.login.or.signup">log in / sign up</a>
             </li>
             {% endif %}
-            <li class="dropdown ng-cloak">
+            <li class="ng-cloak">
             <!-- <li class="dropdown" ng-class="{active: state.includes('me') || state.includes('draft')}"> -->
 
-              <a bs-dropdown placement='bottom-right' aria-haspopup="true" aria-expanded="false" style='position:relative; padding-right: 30px'>
+              <!--<a bs-dropdown placement='bottom-right' aria-haspopup="true" aria-expanded="false" style='position:relative; padding-right: 30px'>
                 <span class='dropdown-label'>{% verbatim %}<span>{{language|substr:0:2}}</span>{% endverbatim %}<span style='position:absolute; right:5px; top:0' class='icon icon-arrow-down-circle'></span></span>
-              </a>
+              </a>-->
 
-              <ul class="dropdown-menu" role="menu">
-                <li ng-class="{'active': language=='en_US'}"><a ng-click='changeLanguage("en_US")' translate='language.en_US'></a></li>
-<!--                <li ng-class="{'active': language=='fr_FR'}"><a ng-click='changeLanguage("fr_FR")' translate='language.fr_FR'></a></li>-->
-                <li ng-class="{'active': language=='de_DE'}"><a ng-click='changeLanguage("de_DE")' translate='language.de_DE'></a></li>
-              </ul>
+              <div class="lang" style="margin-right: 50px">
+                <div style="float: left; margin-right: 10px" ng-class="{'active': language=='en_US'}"><a ng-click='changeLanguage("en_US")' >EN</a></div>
+                <div style="float: left; margin-right: 10px" ng-class="{'active': language=='de_DE'}"><a ng-click='changeLanguage("de_DE")' >DE</a></div>
+                <div style="float: left;" ng-class="{'active': language=='fr_FR'}"><a ng-click='changeLanguage("fr_FR")' >FR</a></div>
+              </div>
+              <div>
+            <div id='search-wrapper'>
+              <form role="form" ng-submit="search(searchquery)">
+                <div class="input-group">
+                  <input type="text" class="form-control" ng-model="searchquery" translate-attr="{ placeholder: 'headline.search'}">
+                  <span class="input-group-btn">
+                    <button ng-click="search(searchquery)" class="btn btn-secondary" type="button"><div class='icon icon-magnifier'></div></button>
+                  </span>
+                </div>
+
+              </form>
+            </div>
 
             </li>
             {% verbatim %}
@@ -158,16 +174,17 @@
 
 
                   <!-- <li class="active"><a href="#">home <span class="sr-only">(current)</span></a></li> -->
-                  <li ui-sref-active="active"><a href ui-sref='page({name:"people"})' translate="headline.people"></a></li>
+                  <li ui-sref-active="active"><a href ui-sref='page({name:"about"})' translate="headline.about"></a></li>
+                  <li ui-sref-active="active"><a href ui-sref='page({name:"contact"})' translate="headline.contact"></a></li>
                   <li ng-class="{active: (state.includes('publications') || state.includes('story') || state.includes('collection')) && !state.includes('me')}"><a href ui-sref='publications.all' translate="headline.publications"></a></li>
                   <!-- <li ui-sref-active="active"><a href ui-sref='authors' translate="headline.authors"></a></li> -->
-                  <li ui-sref-active="active"><a ui-sref="blog.event" translate="headline.events"></a></li>
-                  <li ui-sref-active="active"><a ui-sref="blog.news" translate="headline.news"></a></li>
+<!--                  <li ui-sref-active="active"><a ui-sref="blog.event" translate="headline.events"></a></li>-->
+<!--                  <li ui-sref-active="active"><a ui-sref="blog.news" translate="headline.news"></a></li>-->
 
                  <!--  <li ng-class="{active: state.includes('event')}"><a ui-sref="events.everything" translate="headline.events"></a></li>
                   -->
                   <!-- <li ng-if='user.username' ui-sref-active="active"><a ui-sref="draft"><b style='color:#151515' translate="write"></b></a></li> -->
-                  <li id='search-wrapper'>
+                  <!--<li id='search-wrapper'>
                     <form role="form" ng-submit="search(searchquery)">
                       <div class="input-group">
                         <input type="text" class="form-control" ng-model="searchquery" placeholder="Search for...">
@@ -177,7 +194,7 @@
                       </div>
 
                     </form>
-                  </li>
+                  </li>-->
 
 
                 </ul>
@@ -208,6 +225,7 @@
                   {% endif %}
                   <li class='compact' ng-class="language=='en_US'?'active':''"><a ng-click='changeLanguage("en_US")'>EN</a></li>
                   <li class='compact' ng-class="language=='fr_FR'?'active':''"><a ng-click='changeLanguage("fr_FR")'>FR</a></li>
+                  <li class='compact' ng-class="language=='de_DE'?'active':''"><a ng-click='changeLanguage("de_DE")'>DE</a></li>
 
 
                 </ul>
@@ -218,6 +236,7 @@
 
           </div>
         </div>
+      </div>
       </div>
     </nav>
   {% endblock %}
@@ -265,12 +284,12 @@
         _is_mobile =  windowWidth < 768;
         floatinglimit = navh;
 
-        evaluateFloating();
+        //evaluateFloating();
       })
 
       function evaluateFloating(e){
-          st = _windox.scrollTop();
-          navbar_offset = Math.max(floatinglimit - st, 0);
+          /*st = _windox.scrollTop();
+          navbar_offset = Math.max(floatinglimit - st, 0);*/
 
         // if(navbar_offset != _navbar_offset)
         //   for(var i in _offsetables)
@@ -282,7 +301,7 @@
         //         '-ms-transform': 'translateY('+navbar_offset+'px)',
         //       });
 
-        if(st > floatinglimit) {
+        /*if(st > floatinglimit) {
           if(!isBelowFloating){
             for(var i in _offsetables)
               _offsetables[i].addClass('below-floating');
@@ -297,10 +316,10 @@
         }
 
 
-        _navbar_offset = navbar_offset;
+        _navbar_offset = navbar_offset;*/
       };
 
-      _windox.scroll(evaluateFloating)
+      //_windox.scroll(evaluateFloating)
 
 
       angular.module('miller')
