--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -14,9 +14,9 @@
         style="font-size:3rem; font-weight:bold;">Be</span>déelegung<br/>
 fir eng nohalteg territorial Entwecklung zu Letzebuerg</span>
     </div>
-    <div class="col-md-offset-2 col-md-8" style="height: 350px">
+    <div class="col-md-offset-2 col-md-8 text-center" style="height: 350px">
         <div class="bg-color-lblue text-center color-white"
-             style="width: 220px; height:220px; border-radius:200px; padding: 40px; font-size: 1.5rem; position: absolute; top:25px; left:35px; z-index: 200">BIBE -<br/>
+             style="width: 220px; height:220px; border-radius:200px; padding: 40px; font-size: 1.5rem; position: absolute; top:25px; left:5%; z-index: 200">BIBE -<br/>
             Participation<br/>
             citoyenne pour un<br/>
             développement<br/>
@@ -24,7 +24,7 @@ fir eng nohalteg territorial Entwecklung zu Letzebuerg</span>
             Luxembourg
         </div>
         <div class="bg-color-blue text-center color-white"
-             style="width: 250px; height:250px; border-radius:220px; padding: 50px; font-size: 1.5rem; position: absolute; top:60px; left:208px">BIBE est<br/>
+             style="width: 250px; height:250px; border-radius:220px; padding: 50px; font-size: 1.5rem; position: absolute; top:60px; left:30%">BIBE est<br/>
             composé par le mot<br/>
             Biergerbedéelegung<br/>
             qui signifie participation<br/>
@@ -39,7 +39,7 @@ fir eng nohalteg territorial Entwecklung zu Letzebuerg</span>
             l’Aménagement du<br/>
             territoire.
         </div>
-        <img src="/static/images/about/img1.svg" style="width: 60px; position: absolute; top:32px; left:0"/>
+        <img src="/static/images/about/img1.svg" style="width: 60px; position: absolute; top:32px; left:2%"/>
         <img src="/static/images/about/img2.svg" style="width: 60px; position: absolute; top:32px; left:432px"/>
         <img src="/static/images/about/img3.svg" style="width: 60px; position: absolute; top:4px; left:710px"/>
     </div>
@@ -72,7 +72,7 @@ fir eng nohalteg territorial Entwecklung zu Letzebuerg</span>
     </div>
     <div class="col-md-offset-3 col-md-6 text-center">
         <br/><br/>
-        <div class="carre-orange">
+        <div class="carre-orange text-justify color-white" style="padding: 50px">
             <p>1. Bibe répertorie des alternatives de transition citoyenne
             écologique et solidaire. Elles sont à l’initiative d’individus ou de
             groupes d’individus de la société civile qui prennent leurs
@@ -97,6 +97,9 @@ fir eng nohalteg territorial Entwecklung zu Letzebuerg</span>
             démarche d’ouverture, de participation, et de partage de leur
             savoir-faire, savoirs-être, connaissances ou pratiques.</p>
         </div>
+        <br/><br/>
+        <img src="/static/images/about/img5.svg" style="width: 130px; position: absolute; top:4px; left:-114px"/>
+        <img src="/static/images/about/img6.svg" style="width: 130px; position: absolute; top:455px; left:98%"/>
     </div>
 
 </div>
