--- a/miller/index.html
+++ b/miller/index.html
@@ -5,6 +5,7 @@
   <div id="footer" ng-class='state'>
     <div class='container'>
       <div class="row">
+
         <div class='col-sm-12' style="background-color: #f26951">
           <div class="col-sm-8" style="height:80px;padding-top:20px" >
             <div ui-sref-active="active" class="text-right"><a class='footer' href ui-sref='page({name:"terms-of-use"})' translate='footer.termsofservice'></a>
@@ -35,7 +36,7 @@
           </div>
         </div>
 
-        <div class="collapse navbar-collapse" style="margin-top: 5px; margin-left:0">
+        <div class="collapse navbar-collapse" style="margin-top: 5px; margin-left:274px">
 
 
           <ul class="nav navbar-nav">
@@ -159,76 +160,77 @@
 
         </div>
 
-        <div class="menu-wrapper" ng-class="{'active': showMenu}">
-          <div class="inner">
-            <div class="row">
-              <div class="col-xs-6">
-                <ul class="nav navbar-nav">
+
+      </div>
+      <div class="menu-wrapper" ng-class="{'active': showMenu}">
+        <div class="inner">
+          <div class="row">
+            <div class="col-xs-6">
+              <ul class="nav navbar-nav">
 
 
 
-                  <!-- <li class="active"><a href="#">home <span class="sr-only">(current)</span></a></li> -->
-                  <li ui-sref-active="active"><a href ui-sref='page({name:"about"})' translate="headline.about"></a></li>
-                  <li ui-sref-active="active"><a href ui-sref='page({name:"contact"})' translate="headline.contact"></a></li>
-                  <li ng-class="{active: (state.includes('publications') || state.includes('story') || state.includes('collection')) && !state.includes('me')}"><a href ui-sref='publications.all' translate="headline.publications"></a></li>
-                  <!-- <li ui-sref-active="active"><a href ui-sref='authors' translate="headline.authors"></a></li> -->
-<!--                  <li ui-sref-active="active"><a ui-sref="blog.event" translate="headline.events"></a></li>-->
-<!--                  <li ui-sref-active="active"><a ui-sref="blog.news" translate="headline.news"></a></li>-->
+                <!-- <li class="active"><a href="#">home <span class="sr-only">(current)</span></a></li> -->
+                <li ui-sref-active="active"><a href ui-sref='page({name:"about"})' translate="headline.about"></a></li>
+                <li ui-sref-active="active"><a href ui-sref='page({name:"contact"})' translate="headline.contact"></a></li>
+                <li ng-class="{active: (state.includes('publications') || state.includes('story') || state.includes('collection')) && !state.includes('me')}"><a href ui-sref='publications.all' translate="headline.publications"></a></li>
+                <!-- <li ui-sref-active="active"><a href ui-sref='authors' translate="headline.authors"></a></li> -->
+                <!--                  <li ui-sref-active="active"><a ui-sref="blog.event" translate="headline.events"></a></li>-->
+                <!--                  <li ui-sref-active="active"><a ui-sref="blog.news" translate="headline.news"></a></li>-->
 
-                 <!--  <li ng-class="{active: state.includes('event')}"><a ui-sref="events.everything" translate="headline.events"></a></li>
-                  -->
-                  <!-- <li ng-if='user.username' ui-sref-active="active"><a ui-sref="draft"><b style='color:#151515' translate="write"></b></a></li> -->
-                  <!--<li id='search-wrapper'>
-                    <form role="form" ng-submit="search(searchquery)">
-                      <div class="input-group">
-                        <input type="text" class="form-control" ng-model="searchquery" placeholder="Search for...">
-                        <span class="input-group-btn">
-                          <button ng-click="search(searchquery)" class="btn btn-secondary" type="button"><div class='icon icon-magnifier'></div></button>
-                        </span>
-                      </div>
+                <!--  <li ng-class="{active: state.includes('event')}"><a ui-sref="events.everything" translate="headline.events"></a></li>
+                 -->
+                <!-- <li ng-if='user.username' ui-sref-active="active"><a ui-sref="draft"><b style='color:#151515' translate="write"></b></a></li> -->
+                <!--<li id='search-wrapper'>
+                  <form role="form" ng-submit="search(searchquery)">
+                    <div class="input-group">
+                      <input type="text" class="form-control" ng-model="searchquery" placeholder="Search for...">
+                      <span class="input-group-btn">
+                        <button ng-click="search(searchquery)" class="btn btn-secondary" type="button"><div class='icon icon-magnifier'></div></button>
+                      </span>
+                    </div>
 
-                    </form>
-                  </li>-->
+                  </form>
+                </li>-->
 
 
-                </ul>
+              </ul>
 
-              </div>
-              <div class="col-xs-6">
-                <ul class="nav navbar-nav navbar-right">
-                  {% if user.is_authenticated %}
-                  <li class="dropdown">
+            </div>
+            <div class="col-xs-6">
+              <ul class="nav navbar-nav navbar-right">
+                {% if user.is_authenticated %}
+                <li class="dropdown">
                   <!-- <li class="dropdown" ng-class="{active: state.includes('me') || state.includes('draft')}"> -->
 
 
 
-                    <li ui-sref-active="active"><a ui-sref="draft" translate='write'></a></li>
-                      <li ui-sref-active="active"><a ui-sref="upload" translate='upload'></a></li>
-                      <li ui-sref-active="active"><a ui-sref="profile.publications({username:user.username})">your writings</a></li>
-                      <li><a href='{% url "logout_view" %}'>log out</a></li>
-                      {% if user.is_staff %}
-                      <li><a href='{% url "admin:index" %}'>admin</a></li>
-                      {% endif %}
+                <li ui-sref-active="active"><a ui-sref="draft" translate='write'></a></li>
+                <li ui-sref-active="active"><a ui-sref="upload" translate='upload'></a></li>
+                <li ui-sref-active="active"><a ui-sref="profile.publications({username:user.username})">your writings</a></li>
+                <li><a href='{% url "logout_view" %}'>log out</a></li>
+                {% if user.is_staff %}
+                <li><a href='{% url "admin:index" %}'>admin</a></li>
+                {% endif %}
 
 
-                  </li>
-                  {% else %}
-                  <li>
-                    <a ng-href='{% url "login_view" %}?next={% verbatim %}{{path}}{% endverbatim %}' translate="headline.login.or.signup">log in / sign up</a>
-                  </li>
-                  {% endif %}
-                  <li class='compact' ng-class="language=='en_US'?'active':''"><a ng-click='changeLanguage("en_US")'>EN</a></li>
-                  <li class='compact' ng-class="language=='fr_FR'?'active':''"><a ng-click='changeLanguage("fr_FR")'>FR</a></li>
-                  <li class='compact' ng-class="language=='de_DE'?'active':''"><a ng-click='changeLanguage("de_DE")'>DE</a></li>
+                </li>
+                {% else %}
+                <li>
+                  <a ng-href='{% url "login_view" %}?next={% verbatim %}{{path}}{% endverbatim %}' translate="headline.login.or.signup">log in / sign up</a>
+                </li>
+                {% endif %}
+                <li class='compact' ng-class="language=='en_US'?'active':''"><a ng-click='changeLanguage("en_US")'>EN</a></li>
+                <li class='compact' ng-class="language=='fr_FR'?'active':''"><a ng-click='changeLanguage("fr_FR")'>FR</a></li>
+                <li class='compact' ng-class="language=='de_DE'?'active':''"><a ng-click='changeLanguage("de_DE")'>DE</a></li>
 
 
-                </ul>
+              </ul>
 
-              </div>
             </div>
-
-
           </div>
+
+
         </div>
       </div>
     </nav>
