--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -2,7 +2,7 @@
 
 <div class="row">
     <div class="col-md-offset-3 col-md-6 center" style="margin-top: -200px; z-index: 2000">
-        <img src="/static/images/about/header-contact.svg">
+        <img src="/static/images/header/header-contact.svg">
     </div>
 </div>
 <div class="row">
@@ -14,7 +14,7 @@
         <br/>
         <p><span class="color-blue">Sophie Zuang</span></p>
         <br/>
-        <p><span class="color-orange">sophie@cell.lu</span></p>
+        <p><span class="color-orange">bibe@cell.lu</span></p>
         <br/>
         <p><span class="color-orange">18-D rue de la Cimenterie<br/>
             L-1337 Luxembourg</span> </p>
@@ -25,7 +25,7 @@
 
 <div class="row">
     <div class="col-md-offset-3 col-md-6 center" style="margin-top: -200px; z-index: 2000">
-        <img src="/static/images/about/header-contact.svg">
+        <img src="/static/images/header/header-contact.svg">
     </div>
 </div>
 <div class="row">
@@ -37,7 +37,7 @@
         <br/>
         <p><span class="color-blue">Sophie Zuang</span></p>
         <br/>
-        <p><span class="color-orange">sophie@cell.lu</span></p>
+        <p><span class="color-orange">bibe@cell.lu</span></p>
         <br/>
         <p><span class="color-orange">18-D rue de la Cimenterie<br/>
             L-1337 Luxembourg</span> </p>
@@ -48,7 +48,7 @@
 
 <div class="row">
     <div class="col-md-offset-3 col-md-6 center" style="margin-top: -200px; z-index: 2000">
-        <img src="/static/images/about/header-contact.svg">
+        <img src="/static/images/header/header-contact.svg">
     </div>
 </div>
 <div class="row">
@@ -60,7 +60,7 @@
         <br/>
         <p><span class="color-blue">Sophie Zuang</span></p>
         <br/>
-        <p><span class="color-orange">sophie@cell.lu</span></p>
+        <p><span class="color-orange">bibe@cell.lu</span></p>
         <br/>
         <p><span class="color-orange">18-D rue de la Cimenterie<br/>
             L-1337 Luxembourg</span> </p>
