--- a/miller/contacts_complete.html
+++ b/miller/contacts_complete.html
@@ -691,8 +691,8 @@
     <div class="col-sm-12">
       <p style="font-size: larger">{% lookupmulti locale "thank.you" language True %}</p>
 
-      <a class="btn btn-primary" href='{{ next }}' type="submit" style="font-size: x-large">
-        <span>&larr; {% lookupmulti locale "back" language %}</span>
+      <a class="btn btn-primary" href='/' type="submit" style="font-size: x-large">
+        <span>{% lookupmulti locale "back" language %}</span>
       </a>
     </div>
   </div>
