feat: new logos, new footer, partner page

--- a/miller/index.html
+++ b/miller/index.html
@@ -6,14 +6,13 @@
     <div class='container'>
       <div class="row">
 
-        <div class='col-sm-12' style="background-color: #f26951">
-          <div class="col-sm-7" style="height:80px;padding-top:20px" >
-            <div ui-sref-active="active" class="text-right"><a class='footer' href ui-sref='page({name:"terms-of-use"})' translate='footer.termsofservice'></a>
-            </div>
-          </div>
-          <div class="col-sm-3 text-right color-white" style="height:80px;padding-top:20px">BIBE@CELL.LU&nbsp;&nbsp;&nbsp;&nbsp;&copy; BIBE 2021 </div>
-          <div class="col-sm-1 text-right" style="padding-top: 15px"><img width='100px' src='{% static "images/CELL_whitebkgrnd.png" %}'/></div>
-
+        <div class='col-xs-12' style="background-color: #f26951" style="height:80px;">
+          <div class="col-sm-1 col-xs-12">&nbsp;</div>
+          <div class="col-sm-2 col-xs-12 text-center" style="padding-top: 23px"><a class='footer' href ui-sref='page({name:"terms-of-use"})' translate='footer.termsofservice'></a></div>
+          <div class="col-sm-2 col-xs-12 color-white text-center" style="padding-top: 23px">BIBE@CELL.LU</div>
+          <div class="col-sm-2 col-xs-12 text-center"><img width='150px' src='{% static "images/CELL_Logo_all_White.png" %}'/></div>
+          <div class="col-sm-2 col-xs-12 color-white text-center" style="padding-top: 23px">designed by <img width='60px' src='{% static "images/logo-moloko.svg" %}'/></div>
+          <div class="col-sm-2 col-xs-12 color-white text-center" style="padding-top: 23px">&copy; BIBE 2022<br/><br/></div>
         </div>
       </div>
     </div>
@@ -33,7 +32,7 @@
           </button>
           <div class='navbar-brand' id="logo" style="align-content: center">
             <a ui-sref="publications.all" ui-sref-opts="{reload: true}">
-              <img style="margin-left: 5rem;margin-top: 1rem; width: 15rem" src='{% static "/images/logo_bibe.svg" %}'>
+              <img style="margin-left: 5rem;margin-top: 1rem; width: 15rem" src='{% static "/images/logo-bibe-sans-sud.svg" %}'>
             </a>
           </div>
         </div>
