--- a/src/pages/partners.html
+++ b/src/pages/partners.html
@@ -2,18 +2,52 @@
 
 <div class="row">
     <div class="col-md-offset-3 col-md-6 center" style="margin-top: -200px; z-index: 2000">
-        <img src="/static/images/about/header-partners.svg">
+        <div style="height:40px" class="hidden-sm">&nbsp;</div>
+        <img src="/static/images/header/PARTNERS.svg">
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-12 text-center">
+    <div class="col-sm-12 text-center" style="padding-left: 3px; padding-right: 3px">
         <br/>
         <h1 class="color-orange">Partners</h1><br/>
     </div>
-    <div class="col-sm-12 text-center">
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <u>FINANCED BY</u>
+        </div>
+    </div>
+    <div class="row">
+    <div class="col-sm-offset-3 col-sm-6 col-xs-12 text-center">
         <br/>
-        <p class="color-black">This is partners page</p>
-        <br/>
+        <img style="padding-right: 10px; padding-left: 10px" class="visible-xs" src="/static/images/LOGO1.png">
+        <img class="hidden-xs" src="/static/images/LOGO1.png">
+    </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 text-center" style="font-size: 1.6rem">
+            <br/><br/>
+            In cooperation with
+            <br/>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-offset-3 col-sm-6">
+            <div class="col-sm-4 text-center">
+                <img style="max-width: 150px" src="/static/images/logo_uni.png"/>
+            </div>
+            <div class="hidden-xs col-sm-4 text-center">
+                <br/>
+                <table>
+                    <tr>
+                        <td style="height: 70px; border-right: 4px solid orangered; border-radius: 2px">&nbsp;</td>
+                        <td style="height: 100%; ">&nbsp;</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-sm-4 text-center">
+                <img style="margin-top: 10px;" src="/static/images/green-map.png"/>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -21,18 +55,52 @@
 
 <div class="row">
     <div class="col-md-offset-3 col-md-6 center" style="margin-top: -200px; z-index: 2000">
-        <img src="/static/images/about/header-contact.svg">
+        <div style="height:40px" class="hidden-sm">&nbsp;</div>
+        <img src="/static/images/header/PARTNERS.svg">
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-12 text-center">
+    <div class="col-sm-12 text-center" style="padding-left: 3px; padding-right: 3px">
         <br/>
-        <h1 class="color-orange">Partners</h1><br/>
+        <h1 class="color-orange">Partner</h1><br/>
     </div>
-    <div class="col-sm-12 text-center">
-        <br/>
-        <p class="color-black">Dies ist die Partner Seite</p>
-        <br/>
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <u>FINANZIERT DURCH</u>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-offset-3 col-sm-6 col-xs-12 text-center">
+            <br/>
+            <img style="padding-right: 10px; padding-left: 10px" class="visible-xs" src="/static/images/LOGO1.png">
+            <img class="hidden-xs" src="/static/images/LOGO1.png">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 text-center" style="font-size: 1.6rem">
+            <br/><br/>
+            In Kooperation mit
+            <br/>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-offset-3 col-sm-6">
+            <div class="col-sm-4 text-center">
+                <img style="max-width: 150px" src="/static/images/logo_uni.png"/>
+            </div>
+            <div class="hidden-xs col-sm-4 text-center">
+                <br/>
+                <table>
+                    <tr>
+                        <td style="height: 70px; border-right: 4px solid orangered; border-radius: 2px">&nbsp;</td>
+                        <td style="height: 100%; ">&nbsp;</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-sm-4 text-center">
+                <img style="margin-top: 10px;" src="/static/images/green-map.png"/>
+            </div>
+        </div>
     </div>
 </div>
 
@@ -40,17 +108,51 @@
 
 <div class="row">
     <div class="col-md-offset-3 col-md-6 center" style="margin-top: -200px; z-index: 2000">
-        <img src="/static/images/about/header-contact.svg">
+        <div style="height:40px" class="hidden-sm">&nbsp;</div>
+        <img src="/static/images/header/PARTNERS.svg">
     </div>
 </div>
 <div class="row">
-    <div class="col-sm-12 text-center">
+    <div class="col-sm-12 text-center" style="padding-left: 3px; padding-right: 3px">
         <br/>
-        <h1 class="color-orange">Partenaires</h1><br/>
+        <h1 class="color-orange">Partner</h1><br/>
     </div>
-    <div class="col-sm-12 text-center">
-        <br/>
-        <p class="color-black">Voici la page des partenaires</p>
-        <br/>
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <u>FINANCÉ DE</u>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-offset-3 col-sm-6 col-xs-12 text-center">
+            <br/>
+            <img style="padding-right: 10px; padding-left: 10px" class="visible-xs" src="/static/images/LOGO1.png">
+            <img class="hidden-xs" src="/static/images/LOGO1.png">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-12 text-center" style="font-size: 1.6rem">
+            <br/><br/>
+            En coopération avec
+            <br/>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-sm-offset-3 col-sm-6">
+            <div class="col-sm-4 text-center">
+                <img style="max-width: 150px" src="/static/images/logo_uni.png"/>
+            </div>
+            <div class="hidden-xs col-sm-4 text-center">
+                <br/>
+                <table>
+                    <tr>
+                        <td style="height: 70px; border-right: 4px solid orangered; border-radius: 2px">&nbsp;</td>
+                        <td style="height: 100%; ">&nbsp;</td>
+                    </tr>
+                </table>
+            </div>
+            <div class="col-sm-4 text-center">
+                <img style="margin-top: 10px;" src="/static/images/green-map.png"/>
+            </div>
+        </div>
     </div>
 </div>
